# ai_robot

./: .gitignore  PROJECT_OVERVIEW.md  README.md  TODO.md  pyproject.toml
Hardware/: serial_test.py
config/: edge.example.yaml  server.example.yaml
deploy/: Dockerfile.server  ai-robot-edge-admin.service  ai-robot-edge.service  ai-robot-server.service  docker-compose.server.yml
docs/: build_plan.md  deployment.md  edge_design.md  server_api_contract.md  servo_sdk.md  servo_todo.md  target_tracking_plan.md  yolov5_face_om.md
scripts/: convert_yolov5_face_atc.sh  export_yolov5_face.py  install_edge.sh  install_server.sh  run_face_gimbal_tracking.py  test_ws_gateway.py
src/ai_robot_edge/: __init__.py  __main__.py  action_groups.py  actions.py  app.py  config.py  events.py  logging_config.py  playback.py  session.py
src/ai_robot_edge/admin/: __init__.py  __main__.py  app.py  commands.py  probes.py  runtime_state.py  status.py
src/ai_robot_edge/audio/: __init__.py  vad.py  wake_word.py  worker.py
src/ai_robot_edge/devices/: __init__.py  base.py  factory.py  gimbal.py  gimbal_cli.py  opencv_camera.py  simulated.py  sounddevice_audio.py
src/ai_robot_edge/interaction/: __init__.py  coordinator.py  policy.py
src/ai_robot_edge/server/: __init__.py  client.py  management.py
src/ai_robot_edge/vision/: __init__.py  detector.py  tracking.py  worker.py  (+1 more)
src/ai_robot_server/: __init__.py  __main__.py  answer_policy.py  app.py  config.py  connectors.py  history.py  orchestrator.py  registry.py  remote.py
tests/: test_audio_worker.py  test_interaction_coordinator.py  test_vad.py  test_vad_segmenter.py  test_voice_gateway_hardware_playback.py  test_welcome.py
