[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-robot-edge"
version = "0.1.0"
description = "Edge service for an intelligent voice interaction robot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
audio = [
  "sounddevice>=0.4.6",
]
vision = [
  "opencv-python>=4.8",
]

[project.scripts]
ai-robot-edge = "ai_robot_edge.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
